--- a/index.html
+++ b/index.html
@@ -196,21 +196,56 @@
       </section>
 
       <!-- [contact] -->
-      <!-- [footer] -->
-    </div>
+      <section class="contact" id="contact">
+        <h1 class="contact-heading">Conatct me</h1>
+        <!-- CSS 16: center -->
+        <form action="contact-form " center>
+          <div class="input-gropu">
+            <label for="">Full name</label>
+            <input
+              class="contact-input"
+              type="text"
+              placeholder="Enter your name"
+            />
+          </div>
+          <div class="input-groups">
+            <div class="input-group">
+              <label for="">Email</label>
+              <input
+                class="contact-input"
+                type="email"
+                placeholder="Enter  your email"
+              />
+              <div class="input-group">
+                <label for="">Phone</label>
+                <input
+                  class="contact-input"
+                  type="text"
+                  placeholder="Enter phone number"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="input-group">
+            <label for="">Message</label>
+            <textarea
+              class="form-textarea"
+              placeholder="your message here"
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+          <div class="input-groups"></div>
+          <input class="form-btn" type="submit" value="submit" />
+        </form>
+      </section>
 
-    <nav id="navbar"></nav>
-    <!--[Home]-->
-    <section id="home"></section>
-    <!-- [About] -->
-    <section id="about" class="section"></section>
-    <!-- [Skills] -->
-    <section id="skills" class="section"></section>
-    <!-- [Projects] -->
-    <section id="projects" class="section"></section>
-    <!-- [Contact] -->
-    <section id="contact" class="section"></section>
-    <!-- [Arrow up] -->
-    <button class="arrow-up"></button>
+      <!-- [footer] -->
+      <footer class="footer">
+        <div class="footer-list"></div>
+      </footer>
+    </div>
   </body>
 </html>
