--- a/index.html
+++ b/index.html
@@ -244,7 +244,16 @@
 
       <!-- [footer] -->
       <footer class="footer">
-        <div class="footer-list"></div>
+        <div class="footer-list">
+          <a href="#" class="footer-link">Home</a>
+          <a class="footer-link">Tours</a>
+          <a class="footer-link">About Us</a>
+          <a class="footer-link">Offer</a>
+          <a href="#contact" class="footer-link">Contact</a>
+        </div>
+        <p class="footer-paragraph">
+          Copyright &copy; All Rights Reserved
+        </p>
       </footer>
     </div>
   </body>
