css. header-image

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           src="images/air-balloon.png"
           alt="header image"
         />
-        <div class="log">
+        <div class="logo">
           <h1>
             <span class="center">t</span>
             <span class="center">h</span>
