--- a/index.html
+++ b/index.html
@@ -197,10 +197,11 @@
 
       <!-- [contact] -->
       <section class="contact" id="contact">
-        <h1 class="contact-heading">Conatct me</h1>
-        <!-- CSS 16: center -->
-        <form action="contact-form " center>
-          <div class="input-gropu">
+        <h1 class="contact-heading">Contact me</h1>
+
+        <!--  CSS 16: center -->
+        <form class="contact-form" center action="">
+          <div class="input-group">
             <label for="">Full name</label>
             <input
               class="contact-input"
@@ -214,18 +215,19 @@
               <input
                 class="contact-input"
                 type="email"
-                placeholder="Enter  your email"
+                placeholder="Enter your email"
               />
-              <div class="input-group">
-                <label for="">Phone</label>
-                <input
-                  class="contact-input"
-                  type="text"
-                  placeholder="Enter phone number"
-                />
-              </div>
+            </div>
+            <div class="input-group">
+              <label for="">Phone</label>
+              <input
+                class="contact-input"
+                type="text"
+                placeholder="Enter phone number"
+              />
             </div>
           </div>
+
           <div class="input-group">
             <label for="">Message</label>
             <textarea
@@ -233,11 +235,10 @@
               placeholder="your message here"
               name=""
               id=""
-              cols="30"
-              rows="10"
             ></textarea>
           </div>
-          <div class="input-groups"></div>
+
+          <!-- T: submit. value -->
           <input class="form-btn" type="submit" value="submit" />
         </form>
       </section>
