--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>forPortfolio</title>
+    <title>The Road</title>
 
     <link rel="icon" href="images/favicon-smile.ico" />
 
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;800&family=Source+Sans+Pro:ital,wght@1,900&display=swap"
       rel="stylesheet"
     />
-
     <script
       src="https://kit.fontawesome.com/4a5f50cc1d.js"
       crossorigin="anonymous"
@@ -22,18 +21,18 @@
   </head>
   <body>
     <div class="container">
-      <!--[Navbar]-->
-      <!-- css 26 :center -->
+      <!-- [navbar] -->
+      <!-- CSS 26 : center -->
       <!-- JS 6 -->
       <div class="open-navbar-icon navbar-icon center">
         <div class="line" style="background-color: red;"></div>
         <div class="line" style="background-color: blue;"></div>
         <div class="line" style="background-color: green;"></div>
       </div>
-
+      <!-- 클릭해서 x모양으로 바뀔 때-->
       <div class="navbar-wrapper">
         <nav class="navbar">
-          <!-- [css 26: center] -->
+          <!-- CSS 26 : center -->
           <div class="close-navbar-icon navbar-icon center">
             <div class="line line-1" style="background-color: red;"></div>
             <div class="line line-2" style="background-color: blue;"></div>
@@ -49,7 +48,7 @@
         </nav>
       </div>
 
-      <!-- [header] -->
+      <!--[header] -->
       <header class="header center">
         <div class="header-text">
           <h1 class="heading">Traveling</h1>
@@ -58,10 +57,11 @@
             storyteller"
           </p>
         </div>
+
         <img
           class="header-image"
           src="images/air-balloon.png"
-          alt="header image"
+          alt="Header image"
         />
         <div class="logo">
           <h1>
@@ -76,13 +76,13 @@
         </div>
       </header>
 
-      <!-- [popular tours] -->
+      <!-- <Popular tours> -->
       <section class="popular-tours">
         <h1 class="popular-tours-heading">The Most Popular Tours</h1>
-        <div class="cards-wrapeer">
+        <div class="cards-wrapper">
           <div class="card">
             <div class="front-side">
-              <img src="images/forest.jpg" alt="forest" class="card-image" />
+              <img src="images/forest.jpg" alt="Forest" class="card-image" />
               <h1 class="tour-name">The wild forest</h1>
               <ul class="card-list">
                 <li class="card-list-item">7 days tour</li>
@@ -91,18 +91,21 @@
                 <li class="card-list-item">Sleep in private tents</li>
                 <li class="card-list-item">Difficulty: medium</li>
               </ul>
-              <button class="navigation-button">Price &gt;&gt;</button>
+              <button class="navigation-button">
+                price &gt;&gt;
+              </button>
             </div>
-
             <div class="back-side center">
-              <button class="navigation-button">&lt;&lt; back</button>
+              <button class="navigation-button">
+                &lt;&lt; back
+              </button>
               <h3 class="tour-price">$399</h3>
               <button class="card-button">Booking</button>
             </div>
           </div>
           <div class="card">
             <div class="front-side">
-              <img src="images/river.jpg" alt="river" class="card-image" />
+              <img src="images/river.jpg" alt="River" class="card-image" />
               <h1 class="tour-name">Along the river</h1>
               <ul class="card-list">
                 <li class="card-list-item">9 days tour</li>
@@ -111,18 +114,21 @@
                 <li class="card-list-item">Sleep in private tents</li>
                 <li class="card-list-item">Difficulty: hard</li>
               </ul>
-              <button class="navigation-button">Price &gt;&gt;</button>
+              <button class="navigation-button">
+                price &gt;&gt;
+              </button>
             </div>
-
             <div class="back-side center">
-              <button class="navigation-button">&lt;&lt; back</button>
+              <button class="navigation-button">
+                &lt;&lt; back
+              </button>
               <h3 class="tour-price">$499</h3>
               <button class="card-button">Booking</button>
             </div>
           </div>
           <div class="card">
             <div class="front-side">
-              <img src="images/sea.jpg" alt="forest" class="card-image" />
+              <img src="images/sea.jpg" alt="Sea" class="card-image" />
               <h1 class="tour-name">The island beach</h1>
               <ul class="card-list">
                 <li class="card-list-item">5 days tour</li>
@@ -131,20 +137,28 @@
                 <li class="card-list-item">Sleep in hotel</li>
                 <li class="card-list-item">Difficulty: easy</li>
               </ul>
-              <button class="navigation-button">Price &gt;&gt;</button>
+              <button class="navigation-button">
+                price &gt;&gt;
+              </button>
             </div>
-
             <div class="back-side center">
-              <button class="navigation-button">&lt;&lt; back</button>
+              <button class="navigation-button">
+                &lt;&lt; back
+              </button>
               <h3 class="tour-price">$599</h3>
               <button class="card-button">Booking</button>
             </div>
           </div>
         </div>
       </section>
-      <!-- [stories] -->
+
+      <!-- <Stories> -->
       <section class="stories">
+        <!-- T: video. source:src -->
         <div class="video-container">
+          <!-- <video  class="bg-video"  autoplay muted loop>
+    <source src="images/video.mp4" type="video/mp4">
+  </video> -->
           <video
             class="bg-video"
             src="images/video.mp4"
@@ -153,6 +167,7 @@
             loop
           ></video>
         </div>
+
         <div class="stories-wrapper">
           <div class="story-bg">
             <div class="story">
@@ -165,14 +180,16 @@
               <div class="story-text">
                 <h1 class="story-heading">These were the best of this year</h1>
                 <p class="story-paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos
-                  voluptate aut adipisci hic ab debitis deleniti recusandae
-                  veritatis saepe alias asperiores ea animi officiis labore,
-                  possimus culpa eligendi placeat ipsum!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Recusandae quia commodi vitae quod repellat consectetur
+                  necessitatibus laudantium facere autem illum. Praesentium
+                  ullam veritatis deleniti officia consequatur ipsam magnam
+                  laborum rem?
                 </p>
               </div>
             </div>
           </div>
+
           <div class="story-bg">
             <div class="story">
               <img
@@ -180,14 +197,14 @@
                 src="images/story-img-2.jpg"
                 alt="Customer image"
               />
-
               <div class="story-text">
                 <h1 class="story-heading">I enjoyed this great year</h1>
                 <p class="story-paragraph">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos
-                  voluptate aut adipisci hic ab debitis deleniti recusandae
-                  veritatis saepe alias asperiores ea animi officiis labore,
-                  possimus culpa eligendi placeat ipsum!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Recusandae quia commodi vitae quod repellat consectetur
+                  necessitatibus laudantium facere autem illum. Praesentium
+                  ullam veritatis deleniti officia consequatur ipsam magnam
+                  laborum rem?
                 </p>
               </div>
             </div>
@@ -195,10 +212,11 @@
         </div>
       </section>
 
-      <!-- [contact] -->
+      <!-- Contact -->
       <section class="contact" id="contact">
         <h1 class="contact-heading">Contact me</h1>
 
+        <!-- T: form. label. input-text,email, textarea,placeholder -->
         <!--  CSS 16: center -->
         <form class="contact-form" center action="">
           <div class="input-group">
@@ -243,17 +261,25 @@
         </form>
       </section>
 
-      <!-- [footer] -->
+      <!-- [Footer]-->
+      <!-- T: footer -->
+
       <footer class="footer">
         <div class="footer-list">
-          <a href="#" class="footer-link">Home</a>
-          <a class="footer-link">Tours</a>
-          <a class="footer-link">About Us</a>
-          <a class="footer-link">Offer</a>
+          <!-- T: href를 없애면 제자리에서 안움직임. #넣으면 맨위로 이동 , '#name' 넣고 "id='name'"넣으면 그곳으로 이동-->
+          <a class="footer-link">Home</a>
+          <a  class="footer-link">Tours</a>
+          <a
+           
+            class="footer-link"
+            >About Us</a
+          >
+          <a  class="footer-link">Offer</a>
           <a href="#contact" class="footer-link">Contact</a>
         </div>
         <p class="footer-paragraph">
-          Copyright &copy; All Rights Reserved
+          <!-- T: &copy; -->
+          Copyright &copy; CodeAndCreate All Rights Reserved
         </p>
       </footer>
     </div>
