--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="line" style="background-color: blue;"></div>
         <div class="line" style="background-color: green;"></div>
       </div>
-      <!-- 클릭해서 x모양으로 바뀔 때-->
+
       <div class="navbar-wrapper">
         <nav class="navbar">
           <!-- CSS 26 : center -->
@@ -154,11 +154,7 @@
 
       <!-- <Stories> -->
       <section class="stories">
-        <!-- T: video. source:src -->
         <div class="video-container">
-          <!-- <video  class="bg-video"  autoplay muted loop>
-    <source src="images/video.mp4" type="video/mp4">
-  </video> -->
           <video
             class="bg-video"
             src="images/video.mp4"
@@ -216,7 +212,6 @@
       <section class="contact" id="contact">
         <h1 class="contact-heading">Contact me</h1>
 
-        <!-- T: form. label. input-text,email, textarea,placeholder -->
         <!--  CSS 16: center -->
         <form class="contact-form" center action="">
           <div class="input-group">
@@ -266,19 +261,13 @@
 
       <footer class="footer">
         <div class="footer-list">
-          <!-- T: href를 없애면 제자리에서 안움직임. #넣으면 맨위로 이동 , '#name' 넣고 "id='name'"넣으면 그곳으로 이동-->
           <a class="footer-link">Home</a>
-          <a  class="footer-link">Tours</a>
-          <a
-           
-            class="footer-link"
-            >About Us</a
-          >
-          <a  class="footer-link">Offer</a>
+          <a class="footer-link">Tours</a>
+          <a class="footer-link">About Us</a>
+          <a class="footer-link">Offer</a>
           <a href="#contact" class="footer-link">Contact</a>
         </div>
         <p class="footer-paragraph">
-          <!-- T: &copy; -->
           Copyright &copy; CodeAndCreate All Rights Reserved
         </p>
       </footer>
