--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Road</title>
 
-    <link rel="icon" href="images/favicon-smile.ico" />
+    <link rel="icon" href="images/favicon-star.ico" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;800&family=Source+Sans+Pro:ital,wght@1,900&display=swap"
